--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^1.0.3
   freezed_annotation: ^2.0.1
+  queen_validators: ^1.0.0
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.15
 
 dev_dependencies:
   flutter_test:
