--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   queen_validators: ^1.0.0
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.15
+  cloud_firestore: ^3.1.13
 
 dev_dependencies:
   flutter_test:
