--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.15
   cloud_firestore: ^3.1.13
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
