--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   cloud_firestore: ^3.1.13
   uuid: ^3.0.6
   intl: ^0.17.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/launcher_icon.png"
 
 dev_dependencies:
   flutter_test:
