--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^3.0.6
   intl: ^0.17.0
   flutter_launcher_icons: ^0.9.2
+  url_launcher: ^6.1.0
 
 flutter_icons:
   android: "launcher_icon"
